--- a/index.html
+++ b/index.html
@@ -3,49 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DMK Eletrotécnica</title>
-  <meta name="description" content="DMK Eletrotécnica — Laudo para SPDA, inspeções, projetos e laudos técnicos (SPDA e NR10)."/>
+  <title>DMK Eletrotécnica | Umuarama - PR</title>
+  <meta name="description" content="DMK Eletrotécnica em Umuarama/PR — energia solar, manutenção de usinas fotovoltaicas, consultoria elétrica, projetos e laudos técnicos."/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-50 text-gray-900 antialiased">
 
-  <!-- HERO / BANNER -->
+  <!-- HERO -->
   <section class="relative h-[70vh] min-h-[480px] flex items-center justify-center overflow-hidden">
-    <!-- Imagem do banner -->
-    <img src="banner.jpg" alt="Banner DMK Eletrotécnica" class="absolute inset-0 h-full w-full object-cover">
-    <!-- Camada escura para contraste -->
-    <div class="absolute inset-0 bg-black/50"></div>
+    <img src="banner.jpg" alt="DMK Eletrotécnica - Energia Solar e Consultoria Elétrica" class="absolute inset-0 h-full w-full object-cover">
+    <div class="absolute inset-0 bg-black/55"></div>
 
-    <!-- Conteúdo do banner -->
     <div class="relative z-10 text-center px-6">
       <h1 class="text-4xl sm:text-5xl font-extrabold text-white drop-shadow mb-3">
         DMK Eletrotécnica
       </h1>
+
+      <p class="text-base sm:text-lg text-gray-100 mb-2">
+        Umuarama – Paraná
+      </p>
+
       <p class="text-base sm:text-lg text-gray-100 mb-6 max-w-3xl mx-auto">
-        Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos
+        Energia solar, manutenção de usinas fotovoltaicas, consultoria elétrica,
+        projetos e laudos técnicos.
       </p>
 
       <p class="text-xl font-semibold text-white mb-3">Solicitar Orçamento</p>
 
-      <!-- Botão Telefone -->
+      <!-- Telefone -->
       <a href="tel:+5551992429703"
          class="inline-flex items-center gap-2 bg-blue-500 hover:bg-blue-600 text-white font-bold px-5 py-3 rounded-lg transition mb-2">
-        <!-- Ícone telefone -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-5 h-5 fill-current">
-          <path d="M511.6 380.2c3.4 8.8.9 18.9-6.3 25.2l-81.1 72.5c-7.4 6.6-18.4 8.3-27.6 4.3-29.3-12.4-61.2-28.6-96.1-58.1-34.8-29.6-62.3-61.3-81.1-87.5-5.7-8.1-4.6-19.2 2.5-26.2l57.7-57.7c7.1-7.1 8.8-18.2 2.5-26.2-15.4-19.7-32.4-43.9-47.5-70.7-15.1-26.9-28.2-55.2-38-83.7-3-9.2-.9-19.3 6.3-25.9L181.7 6.4c7.3-6.6 17.8-8.2 26.7-4.2 24.8 10.8 55.5 26.4 88.1 54.3 32.6 27.8 61.7 61.5 87.6 96.5 25.8 35 43.9 68.7 54.8 93.6 4.1 8.9 2.4 19.4-4.4 26.7l-64.9 64.9c-6.6 6.6-16.7 8.7-25.9 5.7-12.3-3.9-25-8.2-38-13.1 11.9 20.5 26.1 40.5 42.7 59.1 16.5 18.6 34.7 35.7 54.4 51.2 6.8 5.2 16.3 6.1 24 2.4l64.3-30.7c8.3-4 18.1-2.7 24.6 3.3l51.6 48.7z"/>
-        </svg>
-        <span>+55 51 99242-9703</span>
+        📞 +55 51 99242-9703
       </a>
 
-      <!-- Botão WhatsApp -->
+      <!-- WhatsApp -->
       <a href="https://wa.me/5551992429703" target="_blank"
          class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-5 py-3 rounded-lg transition">
-        <!-- Ícone WhatsApp -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 fill-current">
-          <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
-        </svg>
-        <span>WhatsApp</span>
+        💬 Falar no WhatsApp
       </a>
     </div>
   </section>
@@ -54,82 +49,91 @@
   <section class="py-12 px-6 max-w-5xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-4">Sobre a DMK</h2>
     <p class="text-lg text-gray-700">
-      A <strong>DMK Eletrotécnica</strong> oferece soluções completas em energia elétrica: fiscalização de obras, perícias judiciais e extrajudiciais,
-      inspeções técnicas, projetos e emissão de laudos de SPDA e NR10. Segurança, qualidade e eficiência em cada entrega.
+      A <strong>DMK Eletrotécnica</strong> atua em <strong>Umuarama/PR</strong> oferecendo
+      soluções técnicas em <strong>energia solar</strong>, <strong>manutenção preventiva
+      e corretiva</strong>, <strong>consultoria elétrica</strong>, <strong>projetos</strong>
+      e <strong>laudos técnicos</strong>. Atendimento técnico, documentação clara e foco
+      em segurança e eficiência.
     </p>
   </section>
 
   <!-- SERVIÇOS -->
   <section class="bg-gray-100 py-14 px-6">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold text-center mb-10">📌 Serviços DMK Eletrotécnica</h2>
+      <h2 class="text-3xl font-bold text-center mb-10">
+        Serviços – Umuarama/PR
+      </h2>
 
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-        <!-- Fiscalização de Obras -->
+        <!-- Manutenção Solar -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="fiscalizacao.jpg" alt="Fiscalização de obras elétricas" class="w-full h-48 object-cover"/>
+          <img src="fiscalizacao.jpg" alt="Manutenção de usinas solares" class="w-full h-48 object-cover"/>
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">⚡ Fiscalização de Obras Elétricas</h3>
+            <h3 class="text-xl font-semibold mb-2">☀️ Manutenção de Usinas Solares</h3>
             <p class="text-gray-600">
-              Acompanhamento técnico especializado em obras de redes, subestações e instalações elétricas,
-              garantindo conformidade com normas e qualidade na execução.
-            </p>
-          </div>
-        </article>
-
-        <!-- Perícias -->
-        <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="pericia.jpg" alt="Perícias judiciais e extrajudiciais" class="w-full h-48 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
-            <p class="text-gray-600">
-              Atuação como perito e assistente técnico em processos envolvendo energia elétrica, com laudos técnicos claros e fundamentados.
+              Manutenção preventiva e corretiva em sistemas fotovoltaicos para
+              aumentar a geração, reduzir falhas e prolongar a vida útil dos equipamentos.
             </p>
           </div>
         </article>
 
         <!-- Inspeções -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="inspecao.jpg" alt="Inspeções técnicas em instalações elétricas" class="w-full h-48 object-cover"/>
+          <img src="inspecao.jpg" alt="Inspeções técnicas em energia solar" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🔍 Inspeções Técnicas</h3>
             <p class="text-gray-600">
-              Vistorias detalhadas em instalações elétricas, identificando riscos, anomalias e oportunidades de melhoria, assegurando segurança e eficiência.
+              Inspeções detalhadas em usinas solares e instalações elétricas,
+              identificando anomalias, riscos e oportunidades de melhoria.
+            </p>
+          </div>
+        </article>
+
+        <!-- Consultoria -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="pericia.jpg" alt="Consultoria elétrica e energia solar" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📊 Consultoria Elétrica</h3>
+            <p class="text-gray-600">
+              Consultoria técnica para otimização de sistemas elétricos e solares,
+              redução de custos, análise de consumo e qualidade de energia.
             </p>
           </div>
         </article>
 
         <!-- Projetos -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="projeto.jpg" alt="Projetos elétricos" class="w-full h-48 object-cover"/>
+          <img src="laudo.jpg" alt="Projetos elétricos e solares" class="w-full h-48 object-cover"/>
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
+            <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos e Solares</h3>
             <p class="text-gray-600">
-              Elaboração de projetos para baixa e média tensão, adequados às normas vigentes, com foco em segurança, economia e viabilidade técnica.
+              Elaboração e revisão de projetos elétricos e fotovoltaicos,
+              conforme normas técnicas e exigências legais.
             </p>
           </div>
         </article>
 
-        <!-- Laudos SPDA -->
+        <!-- Laudos -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="nr.jpg" alt="Laudos técnicos e NR10" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📄 Laudos Técnicos e NR10</h3>
+            <p class="text-gray-600">
+              Emissão de laudos técnicos, relatórios e documentação de conformidade
+              para instalações elétricas e sistemas solares.
+            </p>
+          </div>
+        </article>
+
+        <!-- SPDA -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
           <img src="laudo.jpg" alt="Laudos de SPDA" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
             <p class="text-gray-600">
-              Análise e emissão de laudos técnicos do Sistema de Proteção contra Descargas Atmosféricas, conforme normas da ABNT,
-              garantindo a proteção do patrimônio e das pessoas.
-            </p>
-          </div>
-        </article>
-
-        <!-- Laudos NR10 -->
-        <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="nr.jpg" alt="Laudos NR10" class="w-full h-48 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
-            <p class="text-gray-600">
-              Relatórios de conformidade das instalações elétricas com a NR10, assegurando atendimento às exigências legais de segurança do trabalho.
+              Avaliação e emissão de laudos de SPDA conforme ABNT,
+              garantindo proteção de pessoas, estruturas e equipamentos.
             </p>
           </div>
         </article>
@@ -138,32 +142,36 @@
     </div>
   </section>
 
-  <!-- Seção Final - Chamada para Ação -->
-<section class="bg-gray-900 text-center py-10">
-  <h2 class="text-2xl font-bold text-white mb-4">Precisa de ajuda agora?</h2>
-  <p class="text-gray-300 mb-6">Entre em contato direto pelo WhatsApp ou telefone.</p>
+  <!-- CTA FINAL -->
+  <section class="bg-gray-900 text-center py-10">
+    <h2 class="text-2xl font-bold text-white mb-4">
+      Precisa de manutenção ou consultoria agora?
+    </h2>
+    <p class="text-gray-300 mb-6">
+      Atendimento técnico em Umuarama e região.
+    </p>
 
-  <!-- Botão WhatsApp -->
-  <a href="https://wa.me/5551992429703" target="_blank"
-     class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" aria-hidden="true" class="w-5 h-5 fill-current">
-      <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 ..."/>
-    </svg>
-    Solicitar Orçamento no WhatsApp
-  </a>
+    <a href="https://wa.me/5551992429703" target="_blank"
+       class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
+      💬 Solicitar orçamento no WhatsApp
+    </a>
 
-  <!-- Botão de Chamada Direta -->
-  <a href="tel:+5551992429703"
-     class="inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
-    📞 Ligar Agora
-  </a>
+    <a href="tel:+5551992429703"
+       class="inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
+      📞 Ligar agora
+    </a>
 
-  <!-- Link Localização -->
-  <a href="https://maps.app.goo.gl/n8kqj9KpJWXhM5rg9" target="_blank"
-     class="block text-green-400 hover:text-green-300 mt-4 underline">
-    📍 Ver Localização no Google Maps
-  </a>
-</section>
+    <a href="https://www.google.com/maps?q=Umuarama,+PR" target="_blank"
+       class="block text-green-400 hover:text-green-300 mt-4 underline">
+      📍 Ver localização no Google Maps
+    </a>
+  </section>
+
+</body>
+</html>
+
+
+
 
 
 
