--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Manutenção Solar -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="fiscalizacao.jpg" alt="Manutenção de usinas solares" class="w-full h-48 object-cover"/>
+          <img src="manutenção.jfif" alt="Manutenção de usinas solares" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">☀️ Manutenção de Usinas Solares</h3>
             <p class="text-gray-600">
@@ -92,7 +92,7 @@
 
         <!-- Consultoria -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="pericia.jpg" alt="Consultoria elétrica e energia solar" class="w-full h-48 object-cover"/>
+          <img src="fatura.jfif" alt="Consultoria elétrica e energia solar" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📊 Consultoria Elétrica</h3>
             <p class="text-gray-600">
@@ -104,7 +104,7 @@
 
         <!-- Projetos -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="laudo.jpg" alt="Projetos elétricos e solares" class="w-full h-48 object-cover"/>
+          <img src="projeto.jfif" alt="Projetos elétricos e solares" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos e Solares</h3>
             <p class="text-gray-600">
@@ -169,6 +169,7 @@
 
 </body>
 </html>
+
 
 
 
